Enhance cake slicing interaction with a plate
Added a plate element and updated slice serving mechanism.

--- a/index.html
+++ b/index.html
@@ -6,35 +6,34 @@
 <title>Birthday Cake 🎂</title>
 <style>
 * { margin:0; padding:0; box-sizing:border-box; font-family:-apple-system, BlinkMacSystemFont, sans-serif; }
-body { background:#ffd6e8; min-height:100vh; display:flex; justify-content:center; align-items:center; overflow:hidden; flex-direction:column; }
+body { background:#ffd6e8; min-height:100vh; display:flex; justify-content:center; align-items:center; flex-direction:column; overflow:hidden; }
 
 /* Cake Container */
 .cake-container { position:relative; text-align:center; cursor:pointer; }
 .cake-emoji { font-size:20rem; position:relative; display:inline-block; }
 .flame { position:absolute; top:-2rem; left:50%; transform:translateX(-50%); font-size:3rem; animation:flicker 0.3s infinite alternate; }
 
-/* Slice Animation */
+/* Plate */
+.plate {
+  width:120px; height:40px; background:#fff5ee; border-radius:50%/20%; position:absolute; bottom:50px; left:50%; transform:translateX(-50%); box-shadow:0 5px 10px rgba(0,0,0,0.2);
+}
+
+/* Slice */
 .slice {
   position:absolute;
   top:0;
   width:50px;
   height:100%;
   background:#ffd1e2;
-  clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
-  transform-origin: left bottom;
-  transform: rotate(0deg);
   border-left:2px solid #ff9ad5;
-  transition: transform 0.8s ease, opacity 0.8s ease;
+  border-radius:6px 0 0 6px;
+  transform-origin: left bottom;
+  transition: transform 0.8s ease, top 0.8s ease, left 0.8s ease;
+  z-index:10;
 }
 
 /* Confetti */
-.confetti {
-  position:fixed;
-  width:8px;
-  height:12px;
-  top:-20px;
-  animation: fall 1.5s linear forwards;
-}
+.confetti { position:fixed; width:8px; height:12px; top:-20px; animation: fall 1.5s linear forwards; }
 @keyframes fall { to { transform: translateY(120vh) rotate(360deg); } }
 
 /* Flame Flicker */
@@ -47,7 +46,7 @@ body { background:#ffd6e8; min-height:100vh; display:flex; justify-content:cente
 </head>
 <body>
 
-<h1 style="color:#ff2f92; margin-bottom:20px;">Click the Cake to Take a Slice 🎂✨</h1>
+<h1 style="color:#ff2f92; margin-bottom:20px;">Swipe the Cake to Serve a Slice 🎂✨</h1>
 
 <div class="cake-container" id="cakeContainer">
   <div class="cake-emoji">🎂
@@ -55,29 +54,43 @@ body { background:#ffd6e8; min-height:100vh; display:flex; justify-content:cente
   </div>
 </div>
 
-<script>
-const cake = document.getElementById('cakeContainer');
+<div class="plate" id="plate"></div>
 
-cake.addEventListener('click', () => {
-  takeSlice();
-  confetti();
+<script>
+const cakeContainer = document.getElementById('cakeContainer');
+const plate = document.getElementById('plate');
+
+let startX = 0;
+let sliceCount = 0;
+
+cakeContainer.addEventListener('pointerdown', e => { startX = e.clientX; });
+cakeContainer.addEventListener('pointerup', e => {
+  const diff = e.clientX - startX;
+  if(Math.abs(diff) > 30) serveSlice(diff);
 });
 
-function takeSlice() {
+function serveSlice(diff) {
+  sliceCount++;
   // create slice element
   const slice = document.createElement('div');
   slice.className = 'slice';
-  slice.style.left = `${Math.random() * 80 + 10}px`; // random slice position
-  cake.appendChild(slice);
+  slice.style.left = `${100 + sliceCount*40}px`; // start from cake right side
+  slice.style.top = '0px';
+  cakeContainer.appendChild(slice);
 
-  // animate slice rotation
+  // animate slice flying to plate
   setTimeout(() => {
-    slice.style.transform = `rotate(-45deg) translateY(60px)`;
-    slice.style.opacity = 0;
+    const plateRect = plate.getBoundingClientRect();
+    const cakeRect = cakeContainer.getBoundingClientRect();
+    const targetX = plateRect.left - cakeRect.left + 20;
+    const targetY = plateRect.top - cakeRect.top - 20;
+    slice.style.transform = `rotate(-45deg)`;
+    slice.style.left = `${targetX}px`;
+    slice.style.top = `${targetY}px`;
   }, 50);
 
-  // remove slice after animation
-  setTimeout(() => slice.remove(), 1000);
+  // optional: confetti when slice is served
+  confetti();
 }
 
 // confetti effect
@@ -95,3 +108,4 @@ function confetti() {
 
 </body>
 </html>
+
