--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@ body {
     <h2>Happy Birthday 💕</h2>
     <p>
       May your day be filled with smiles, laughter, and everything that makes
-      you happiest. You deserve all the love today and always. 🎉✨
+      you happiest. You deserve all the love today and always. And have a wonderful day shuttumani🎉✨
     </p>
   </div>
 </div>
@@ -256,4 +256,5 @@ function serveSlice() {
 
 </body>
 </html>
+
 
