--- a/index.html
+++ b/index.html
@@ -79,15 +79,16 @@ body {
   top:6%;
   font-size:1.6rem;
   color:#ff2f92;
-  transition: opacity 0.5s ease;
+  transition: opacity 0.4s ease;
 }
 
 .cake-container {
   position:relative;
   user-select:none;
+  touch-action: pan-y;
   opacity:0;
   transform:scale(0.85);
-  transition: opacity 1.5s ease, transform 1.5s ease;
+  transition: opacity 1.2s ease, transform 1.2s ease;
 }
 
 .cake-container.show {
@@ -98,7 +99,7 @@ body {
 .cake-emoji {
   font-size:20rem;
   position:relative;
-  transition: opacity 0.5s ease;
+  transition: opacity 0.4s ease;
 }
 
 .slice-emoji {
@@ -108,7 +109,7 @@ body {
   left:50%;
   transform:translateX(-50%);
   opacity:0;
-  transition: opacity 1s ease, transform 1s ease;
+  transition: opacity 0.9s ease, transform 0.9s ease;
 }
 
 .cake-text {
@@ -117,7 +118,7 @@ body {
   font-size:1.5rem;
   font-weight:700;
   opacity:0;
-  transition: opacity 1s ease;
+  transition: opacity 0.8s ease;
 }
 
 .flame {
@@ -198,7 +199,7 @@ body {
     <h2>Happy Birthday 💕</h2>
     <p>
       May your day be filled with smiles, laughter, and everything that makes
-      you happiest. You deserve all the love today and always. And have a wonderful day shuttumani🎉✨
+      you happiest. You deserve all the love today and always. 🎉✨
     </p>
   </div>
 </div>
@@ -223,13 +224,19 @@ function goToCake() {
   }, 500);
 }
 
+/* FAST SWIPE */
 let startX = 0;
 let served = false;
 
-cakeContainer.addEventListener('pointerdown', e => startX = e.clientX);
-cakeContainer.addEventListener('pointerup', e => {
-  const diff = e.clientX - startX;
-  if (Math.abs(diff) > 30 && !served) serveSlice();
+cakeContainer.addEventListener('pointerdown', e => {
+  startX = e.clientX;
+});
+
+cakeContainer.addEventListener('pointermove', e => {
+  if (served) return;
+  if (Math.abs(e.clientX - startX) > 15) {
+    serveSlice();
+  }
 });
 
 function serveSlice() {
@@ -241,20 +248,18 @@ function serveSlice() {
   slice.style.opacity = 1;
   slice.style.transform = 'translateX(-50%) translateY(50px)';
 
-  setTimeout(() => cakeText.style.opacity = 1, 400);
+  setTimeout(() => cakeText.style.opacity = 1, 350);
 
-  // Go to final page
   setTimeout(() => {
     screen2.style.opacity = 0;
     setTimeout(() => {
       screen2.classList.add('hidden');
       screen3.classList.remove('hidden');
     }, 600);
-  }, 2000);
+  }, 1800);
 }
 </script>
 
 </body>
 </html>
-
 
