--- a/index.html
+++ b/index.html
@@ -7,168 +7,168 @@
 
 <style>
 * {
-  margin:0;
-  padding:0;
-  box-sizing:border-box;
-  font-family:-apple-system, BlinkMacSystemFont, sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: -apple-system, BlinkMacSystemFont, sans-serif;
 }
 
 body {
-  background:#ffd6e8;
-  min-height:100vh;
-  display:flex;
-  justify-content:center;
-  align-items:center;
-  overflow:hidden;
+  background: #ffd6e8;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
 }
 
-/* SCREENS */
+/* ===== SCREENS ===== */
 .screen {
-  position:absolute;
-  inset:0;
-  display:flex;
-  justify-content:center;
-  align-items:center;
-  flex-direction:column;
+  position: absolute;
+  inset: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
   transition: opacity 0.8s ease;
 }
 
 .hidden {
-  opacity:0;
-  pointer-events:none;
+  opacity: 0;
+  pointer-events: none;
 }
 
 /* ===== SCREEN 1 ===== */
 .card {
-  width:90%;
-  max-width:360px;
-  background:#fff3f7;
-  border-radius:30px;
-  padding:40px 28px;
-  text-align:center;
-  box-shadow:0 25px 50px rgba(0,0,0,.15);
+  width: 90%;
+  max-width: 360px;
+  background: #fff3f7;
+  border-radius: 30px;
+  padding: 40px 28px;
+  text-align: center;
+  box-shadow: 0 25px 50px rgba(0,0,0,.15);
 }
 
 .card h1 {
-  color:#ff2f92;
-  font-size:1.9rem;
-  margin-bottom:18px;
+  color: #ff2f92;
+  font-size: 1.9rem;
+  margin-bottom: 18px;
 }
 
 .card p {
-  color:#444;
-  font-size:1rem;
-  line-height:1.6;
-  margin-bottom:22px;
+  color: #444;
+  font-size: 1rem;
+  line-height: 1.6;
+  margin-bottom: 22px;
 }
 
 .btn {
-  width:100%;
-  padding:16px;
-  border:none;
-  border-radius:40px;
-  background:linear-gradient(135deg,#ff2f92,#ff5fb3);
-  color:white;
-  font-size:1.05rem;
-  cursor:pointer;
+  width: 100%;
+  padding: 16px;
+  border: none;
+  border-radius: 40px;
+  background: linear-gradient(135deg,#ff2f92,#ff5fb3);
+  color: white;
+  font-size: 1.05rem;
+  cursor: pointer;
 }
 
 /* ===== SCREEN 2 ===== */
 .instruction {
-  position:absolute;
-  top:6%;
-  font-size:1.6rem;
-  color:#ff2f92;
+  position: absolute;
+  top: 6%;
+  font-size: 1.7rem;
+  color: #ff2f92;
   transition: opacity 0.4s ease;
 }
 
 .cake-container {
-  position:relative;
-  user-select:none;
-  touch-action: pan-y;
-  opacity:0;
-  transform:scale(0.85);
+  position: relative;
+  user-select: none;
+  touch-action: none; /* 🔥 CRITICAL FIX */
+  opacity: 0;
+  transform: scale(0.85);
   transition: opacity 1.2s ease, transform 1.2s ease;
 }
 
 .cake-container.show {
-  opacity:1;
-  transform:scale(1);
+  opacity: 1;
+  transform: scale(1);
 }
 
 .cake-emoji {
-  font-size:20rem;
-  position:relative;
+  font-size: 20rem;
+  position: relative;
   transition: opacity 0.4s ease;
 }
 
 .slice-emoji {
-  font-size:18rem;
-  position:absolute;
-  top:0;
-  left:50%;
-  transform:translateX(-50%);
-  opacity:0;
+  font-size: 18rem;
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  opacity: 0;
   transition: opacity 0.9s ease, transform 0.9s ease;
 }
 
 .cake-text {
-  margin-top:20px;
-  color:black;
-  font-size:1.5rem;
-  font-weight:700;
-  opacity:0;
+  margin-top: 20px;
+  color: black;
+  font-size: 1.5rem;
+  font-weight: 700;
+  opacity: 0;
   transition: opacity 0.8s ease;
 }
 
 .flame {
-  position:absolute;
-  top:-2rem;
-  left:50%;
-  transform:translateX(-50%);
-  font-size:3rem;
-  animation:flicker 0.3s infinite alternate;
+  position: absolute;
+  top: -2rem;
+  left: 50%;
+  transform: translateX(-50%);
+  font-size: 3rem;
+  animation: flicker 0.3s infinite alternate;
 }
 
 @keyframes flicker {
-  0% { transform:translateX(-50%) translateY(0); }
-  50% { transform:translateX(-50%) translateY(-5px); }
-  100% { transform:translateX(-50%) translateY(0); }
+  0% { transform: translateX(-50%) translateY(0); }
+  50% { transform: translateX(-50%) translateY(-5px); }
+  100% { transform: translateX(-50%) translateY(0); }
 }
 
 /* ===== SCREEN 3 ===== */
 .message-box {
-  background:#fff;
-  padding:40px;
-  border-radius:30px;
-  width:85%;
-  max-width:420px;
-  text-align:center;
-  box-shadow:0 25px 50px rgba(0,0,0,.15);
-  animation:fadeUp 1.2s ease forwards;
+  background: #fff;
+  padding: 40px;
+  border-radius: 30px;
+  width: 85%;
+  max-width: 420px;
+  text-align: center;
+  box-shadow: 0 25px 50px rgba(0,0,0,.15);
+  animation: fadeUp 1.2s ease forwards;
 }
 
 .message-box h2 {
-  color:#ff2f92;
-  margin-bottom:16px;
+  color: #ff2f92;
+  margin-bottom: 16px;
 }
 
 .message-box p {
-  color:#444;
-  font-size:1.05rem;
-  line-height:1.6;
+  color: #444;
+  font-size: 1.05rem;
+  line-height: 1.6;
 }
 
 @keyframes fadeUp {
-  from { opacity:0; transform:translateY(30px); }
-  to { opacity:1; transform:translateY(0); }
+  from { opacity: 0; transform: translateY(30px); }
+  to { opacity: 1; transform: translateY(0); }
 }
 </style>
 </head>
 
 <body>
 
-<!-- SCREEN 1 -->
+<!-- ===== SCREEN 1 ===== -->
 <div class="screen" id="screen1">
   <div class="card">
     <h1>Happy Birthday, Beautiful! 🎂✨</h1>
@@ -177,10 +177,10 @@ body {
   </div>
 </div>
 
-<!-- SCREEN 2 -->
+<!-- ===== SCREEN 2 ===== -->
 <div class="screen hidden" id="screen2">
   <div class="instruction" id="instruction">
-    Swipe the Cake to Serve a Slice 🎂🍰
+    Swipe or Tap the Cake to Serve a Slice 🎂🍰
   </div>
 
   <div class="cake-container" id="cakeContainer">
@@ -193,7 +193,7 @@ body {
   </div>
 </div>
 
-<!-- SCREEN 3 -->
+<!-- ===== SCREEN 3 ===== -->
 <div class="screen hidden" id="screen3">
   <div class="message-box">
     <h2>Happy Birthday 💕</h2>
@@ -224,19 +224,12 @@ function goToCake() {
   }, 500);
 }
 
-/* FAST SWIPE */
-let startX = 0;
+/* 🔥 INSTANT CUT LOGIC (NO DELAY, GAME-LEVEL) */
 let served = false;
 
-cakeContainer.addEventListener('pointerdown', e => {
-  startX = e.clientX;
-});
-
-cakeContainer.addEventListener('pointermove', e => {
+cakeContainer.addEventListener('pointerdown', () => {
   if (served) return;
-  if (Math.abs(e.clientX - startX) > 15) {
-    serveSlice();
-  }
+  serveSlice();
 });
 
 function serveSlice() {
@@ -248,7 +241,7 @@ function serveSlice() {
   slice.style.opacity = 1;
   slice.style.transform = 'translateX(-50%) translateY(50px)';
 
-  setTimeout(() => cakeText.style.opacity = 1, 350);
+  setTimeout(() => cakeText.style.opacity = 1, 300);
 
   setTimeout(() => {
     screen2.style.opacity = 0;
@@ -256,10 +249,11 @@ function serveSlice() {
       screen2.classList.add('hidden');
       screen3.classList.remove('hidden');
     }, 600);
-  }, 1800);
+  }, 1600);
 }
 </script>
 
 </body>
 </html>
+
 
